# risk-recession

./: README.md  pyproject.toml
data/: build_fred.py
notebooks/: analysis.qmd  user_guide.qmd
src/: recession_analysis.py
